prefs.putBean() -> prefs.putBeanObject().